--- a/page-scroll.css
+++ b/page-scroll.css
@@ -26,7 +26,7 @@
   border: 1px solid #ccc;
   position: fixed;
   top: 70%;
-  left: 30px;
+  right: 30px;
   text-align: center;
 }
 .page-scroll .to-top,
